--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -13,6 +14,7 @@
     padding: 20px;
     background-color: #2E2E2E;
     border-radius: 10px;
+    -webkit-box-shadow: 1px 1px 5px #000;
     box-shadow: 1px 1px 5px #000;
 }
 
@@ -20,6 +22,7 @@
     width: 60px;
     height: 50px;
     margin: 5px;
+    -webkit-box-shadow: 1px 1px 1px #000;
     box-shadow: 1px 1px 1px #000;
 }
 
@@ -41,5 +44,20 @@
     margin-top: 10px;
     margin-bottom: 20px;
     border: solid 1px #000;
+    -webkit-box-shadow: 1px 1px 1px #000;
     box-shadow: 1px 1px 1px #000;
+
+}.example {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
 }
